2.0.1
 - enh: implement 'require_steps' in preprocessing to make sure
   that steps are executed in the correct order
2.0.0
 - BREAKING CHANGE: segment in FitProperties is now an integer
 - setup: bump afmformats from 0.15.0 to 0.16.0
 - docs: update doc strings for the "sneddon_spher_approx" model
 - docs: remove duplcate docs for model functions
1.7.8
 - ref: introduce preprocessing_step decorator for managing
   preprocessing steps
 - ref: explicitly request "force-distance" data from afmformats
   (can be lifted by ``setting nanite.read.DEFAULT_MODALITY`` to ``None``)
 - setup: bump afmformats from 0.14.3 to 0.15.0 (initial support for
   loading creep-compliance data)
1.7.7
 - docs: fix build
1.7.6
 - setup: bump afmformats from 0.14.1 to 0.14.3 (adjust tests, speed)
1.7.5
 - ref: migrate `QMap` and `Group` code to afmformats 0.14.1
 - ref: `Indentation` is now a subclass for `afmformats.AFMForceDistance`
 - ref: `QMap` is now a subclass for `afmformats.AFMQMap`
 - ref: `Group` is now a subclass for `afmformats.AFMGroup`
1.7.4
 - enh: allow passing metadata to the IndentationGroup initializer
 - setup: bump afmformats from 0.10.2 to 0.13.2
 - ref: deprecate get_data_paths in favor of afmformats.find_data
1.7.3
 - build: move windows pipeline to GH Actions
 - ref: better warning traceback for deprecated weight_cp method
 - ref: DeprecationWarning: np.int from numpy 1.20
1.7.2
 - build: use oldest-supported-numpy in pyproject.toml
1.7.1
 - build: migrate to GitHub Actions
1.7.0
 - enh: simplified writing new model functions by introducing default
   modeling and residual wrappers
 - ref: improve code readability
1.6.3
 - tests: fix fails due to tifffile upgrade
 - setup: lift historic pinning of lmfit==0.9.5
1.6.2
 - tests: improve coverage
 - enh: add sanity checks for models during registration (#5)
1.6.1
 - enh: if the contact point estimate is not possible, use a fit
   with a partially constant and linear function
1.6.0